fix "submit" button visibility

--- a/styles.css
+++ b/styles.css
@@ -67,11 +67,11 @@ body{
   font-size: 24px;
   font-weight: 700;
   background-color: white;
-  transition: ease-in-out 0.1s;
+  transition: ease-in-out .2s;
 }
 
 .btn-add svg {
-  margin-right: 0.5rem;
+  margin: 0 auto;
 }
 
 .btn-add:hover{
@@ -260,4 +260,10 @@ input:focus{
   box-shadow: none;
   width: 20%;
   transform: scale(2);
+}
+
+#btn-submit {
+  color:black;
+  border-radius: var(--borderRadius);
+  text-align: center;
 }
